test/compile-errors/extern-ptr-is-mut.nz
a extern-ptr

r record
	a a
